@@ -65,29 +65,12 @@ issue 113:
     bug: "uv-lock"-parameter is ignored in block-states
     fix: implement [see https://minecraft.gamepedia.com/Model]
 
-issue 115:
-    bug: the system does NOT pick in multipart from the list of models
-    fix: implement [see https://minecraft.gamepedia.com/Model]
-
-issue 116:
-    bug: model picking from array in blockstates does not use "weight"-attribute
-    fix: implement [see https://minecraft.gamepedia.com/Model]
-
-issue 117:
-    bug: block models ignore rotation parameter for elements
-    fix: implement [see https://minecraft.gamepedia.com/Model]
-
 issue 118:
     bug: block models ignore rescale parameter in elements
     fix: implement [see https://minecraft.gamepedia.com/Model]
 
-issue 119:
-    bug: faces which are not specified are rendered with missing-texture
-
-issue 120:
-    bug: when falling into void and trying to die, you do not respawn
-
 issue 122:
     bug: z-fighting at border between two fences
 
-[123 - 127]
+issue 129:
+    bug: some fence faces are not rendered
