@@ -861,6 +861,9 @@ started these clone on 12th of July, 2019
 [uuk]: changed code from using the tmp-directory located in project-home to use the tempfile-library (see #5)
 [uuk]: re-implemented API for creating custom block renderers
 [uuk]: added support for using OR-condition in block models
+[uuk]: added weight loader for model selection and added multi-model support in multipart
+[uuk]: added support for "|"-splitting in multipart-models conditions
+[uuk]: BoxModels can now be rotated
 
 new blocks planned for upcoming snapshot(s):
     todo: fix issue 113-119 [if possible]
