@@ -4,6 +4,8 @@ Changelog since cleanup-branch of 31.01.2020
 changelog of master-branch
     - re-added support for custom block renderers
     - added support for OR-condition in block-states
+    - block-states act when selecting from multiple models better
+    - block models can now rotate themselves
 
 
 changelog of snapshot 20w10a [released on 04.03.2020]
